@@ -292,9 +292,10 @@ function [Ya1,Ycls,YMF,Ycortex] = cat_vol_partvol1639(Ym,Ycls,Yb,Yy,vx_vol,extop
   NBVC = extopts.experimental; % ########## new BV correction ##########
   if NBVC
     % define some high intensity BVs and the neocortex
-    Ya1(Ya1==0 & smooth3(Yp0<2.5)>.5 & Ym>max(3.25 - 0.2*BVCstr, 3 -(YbvA.^8*BVCstr - 1) & Ydiv<-0.05) & YA==LAB.CT) = LAB.BV;       
+    Ya1(Ya1==0 & smooth3(Yp0<2.5)>.5 & Ym>max(3.25 - 0.2*BVCstr, ...
+      3 -(YbvA.^8*BVCstr - 1) & Ydiv<-0.05) & YA==LAB.CT) = LAB.BV; 
     Ya1( cat_vol_morph( ((Yp0>2.5 & Ym>2.5 & Ym<3 -(YbvA.^4*BVCstr - 1) & (YA==LAB.CT | YA==LAB.BG)) | ...
-         (Yp0>1.5 & Ym<3.5 & Ybgd>1 & Ybgd<8 & (Ybgd>4 | ...
+         (Yp0>1.5 & Ym<3.01 & Yp0A>2.5 & Ybgd>1 & Ybgd<8 & (Ybgd>4 | ...
          Ydiv<-0.02+Ybgd/200))) & Ya1==0 , 'l',[.1 10 ])) = LAB.CT;        % cerebrum
     Yhbv = max(0,8*-Ydiv).^4 .* (2*Yg).^4 .* Ym .* 2.*smooth3(Yp0<2.9) .* (YbvA - 1).^2 .* (YA~=LAB.CB); 
     Ya1(Ya1==0 & Yhbv>.2*(1-BVCstr)) = LAB.BV;
@@ -310,35 +311,49 @@ function [Ya1,Ycls,YMF,Ycortex] = cat_vol_partvol1639(Ym,Ycls,Yb,Yy,vx_vol,extop
   Ya1((Yp0>2.0 & Ym>2.0) & YA==LAB.MB)=LAB.MB;                             % midbrain
   %%
   if NBVC
+    % create a cerebellar mask to avoid corrections there
+    Ycb3 = cat_vol_morph(YA==LAB.CB,'d',1) | (cat_vol_morph(YA==LAB.CB,'d',3) & YbvA<0.5 & Ym<2.5); 
+    Ysc5 = cat_vol_morph(YA==LAB.HC | YA==LAB.BG | YA==LAB.TH,'dd',3); 
+    Yhc3 = smooth3(cat_vol_morph(YA==LAB.HC | YA==LAB.PH | YA==LAB.VT | Ysc5,'d'))>.5;
+    Ya1(Ysc5 & Ym>2.6 & Ym<2.95 & Ya1==0) = LAB.CT;  
+    
     % extend the neocortical area
-    Ya1(Ya1<1 & Ym<2.2) = nan; 
+    Ya1(Ya1<1 & Ym<1.8) = nan; 
     [Ya1,Yd] = cat_vol_downcut(Ya1,Ym,noise); Ya1(isinf(Ya1) | Yd>15 ) = 0; 
 
-    % get blood vessels as intensity-based eikonal-distance map 
+    % get blood vessels as intensity-based eikonal-distance map with
+    % different grow rates, where the first one is more limited by the
+    % local intensities and the second one allows to remove the general 
+    % distance aspect
     Ya0 = single(Ya1>0 & Ya1~=LAB.BV); Ya0(Ym<1.7) = nan; 
-    [~,Yd] = cat_vol_downcut(Ya0,Ym,noise / 2); clear Ya0
-    Ya1(Ya1==0 & Ym>2.2 & Yd>70 & ~cat_vol_morph(YA>1 & YA~=LAB.HD,'d') & ...
-      ~cat_vol_morph(YA==LAB.CB,'d',3)) = LAB.BV;
+    [~,Yd] = cat_vol_downcut(Ya0,Ym,noise  ); clear Ya0 
+    Ya0 = single(Ya1>0 & Ya1~=LAB.BV); Ya0(Ym<1.7) = nan; 
+    [~,Yd2] = cat_vol_downcut(Ya0,Ym,noise * 16); clear Ya0
+    Ya1( ((Yd - Yd2)>10) & Ym>2.4 & YA==LAB.CT & ~Ycb3 & ~Yhc3) = LAB.BV; % add highly distant voxels
+    Ya1(Ya1==0 & Ym>2.4 & Yd>70 & Yd2>50 & ~cat_vol_morph(YA>1 & YA~=LAB.HD,'d') & ~Ycb3 & ~Yhc3) = LAB.BV; % mask further BV
+    Ya1(Ya1==0 & Ym>2.2 & Yd<20 & ~cat_vol_morph(YA>1 & YA~=LAB.HD,'d') & ~Ycb3) = LAB.CT; % add also save brain voxels
+    clear Ycb3 Yhc3
 
     %% modified old lines
-    Ya1((Ya1==0 & Yp0<1.5 & Ym<1.5 & Yp0>1.3 & Ym>1.3) & YA==LAB.BV)=LAB.BV; % low-int BV  (updated due to cerebellar errors RD20190929)
+    Ya1((Ya1==0 & Yp0<1.5 & Ym<1.5 & Yp0>1.3 & Ym>1.3) & YA==LAB.BV) = LAB.BV; % low-int BV  (updated due to cerebellar errors RD20190929)
     Ya1((cat_vol_morph(Ya1==0 & YA~=LAB.CB,'e') & (Ym>2.5 | Ym<1.7) & YA==LAB.CT & ...
       Ym>2 - (YbvA-1).^4*BVCstr) & (YA==LAB.BV | YbvA>1))=LAB.BV;       % high-int BV (updated due to cerebellar errors RD20190929)
     
-    % some light region growing
+    %% some light region growing
     Ya1(Ya1<1 & Ym<2.2) = nan; 
     [Ya1,Yd] = cat_vol_downcut(Ya1,Ym,2*noise); Ya1(isinf(Ya1) | (Yd>15 & Ya1==LAB.BV) ) = 0; 
-%%
- %   Yhbvr = cat_vol_morph(cat_vol_morph(Ya1==LAB.HC | Ya1==LAB.VT | Ya1==LAB.PH | ...
- %     Ya1==LAB.PH | Ya1==LAB.BS | Ya1==LAB.PH | Ya1==LAB.MB, 'dc',3,vx_vol),'d',1); 
- %   Ya1(Yhbvr & Ym>3.05) = LAB.BV;  
-
-    % 
     Ya1(Ya1<1 & Ym<1.9) = nan; 
     [Ya1,Yd] = cat_vol_downcut(Ya1,Ym,2); Ya1(isinf(Ya1) | (Yd>15 & Ya1==LAB.BV) ) = 0; 
     Ya1(Ya1<1 & Ym<1.7) = nan; 
     [Ya1,Yd] = cat_vol_downcut(Ya1,Ym,2); Ya1(isinf(Ya1) | (Yd>15 & Ya1==LAB.BV ) ) = 0; 
   
+    %% cleanup?
+    Ymsk = single(smooth3(Ym)>2.2 | Ya1==LAB.BV) .*  ((Ya1==LAB.CT) + 2*(Ya1==LAB.BV));
+    Ymsk = cat_vol_localstat(Ymsk,Ymsk>0,1,1,8); 
+    %Ya1a = Ya1; Ya1a(Ymsk>0 & Ymsk<1.5) = LAB.CT; Ya1a(Ymsk>=1.5) = LAB.BV;
+% ####### RD20230602: cat_vol_median3c is not working ? dont know why not ###########    
+    Ya1(Ymsk>0 & Ymsk<1.5) = LAB.CT; Ya1(Ymsk>=1.5) = LAB.BV; clear Ymsk
+
   else
     Ya1((Ya1==0 & Yp0<1.5 & Ym<1.5 & Yp0>1.3 & Ym>1.3) & YA==LAB.BV)=LAB.BV; % low-int VB  (updated due to cerebellar erros RD20190929)
     Ya1((Ya1==0 & Yp0>3.0 & Ym>3.2) & YA==LAB.BV)=LAB.BV;                    % high-int VB (updated due to cerebellar erros RD20190929)
@@ -856,11 +871,14 @@ function [Ya1,Ycls,YMF,Ycortex] = cat_vol_partvol1639(Ym,Ycls,Yb,Yy,vx_vol,extop
   
   % set possible blood vessels to class 4
   NS = @(Ys,s) Ys==s | Ys==s+1;
-  Ybv     = NS(Ya1,LAB.BV); 
-  Yclssum = (single(Ycls{1}) + single(Ycls{2})) .* (Ybv);
-  Ycls{5} = cat_vol_ctype(single(Ycls{5}) + Yclssum); 
-  Ycls{1} = cat_vol_ctype(single(Ycls{1}) .* (~Ybv)); 
-  Ycls{2} = cat_vol_ctype(single(Ycls{2}) .* (~Ybv)); 
+  if ~NBVC
+    % this should be done later with consideration of the BV intensity and WM distance! 
+    Ybv     = NS(Ya1,LAB.BV); 
+    Yclssum = (single(Ycls{1}) + single(Ycls{2})) .* (Ybv);
+    Ycls{5} = cat_vol_ctype(single(Ycls{5}) + Yclssum); 
+    Ycls{1} = cat_vol_ctype(single(Ycls{1}) .* (~Ybv)); 
+    Ycls{2} = cat_vol_ctype(single(Ycls{2}) .* (~Ybv)); 
+  end
   clear Ybv; 
   
   % YBG is smoothed a little bit and (B) reset all values that are related with GM/WM intensity (Ym<2.9/3) (A)
